--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "5050:5050"
     environment:
-      - FLASK_ENV=development
+      - FLASK_ENV=development & celery worker -A app.subscribe.task --loglevel=DEBUG & celery -A make_celery beat --loglevel DEBUG
       - FLASK_APP=app
 
   test:
@@ -17,3 +17,5 @@ services:
 
   redis:
     image: "redis:latest"
+    ports:
+      - "6379:6379"
