found the problem of db (not celery)

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,10 +23,12 @@ services:
       - redis
     depends_on:
       - redis
+      - web
+        
     environment:
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
-
+  
   test:
     build: .
     command: pytest
