fix celery connect problem

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,10 +21,10 @@ services:
     command:  celery -A app.subscribe.task worker -l info -B
     links:
       - redis
+      - web
     depends_on:
       - redis
       - web
-        
     environment:
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
